# Pivot_Network_Backend

./: .env.example  .gitignore  CCCC_HELP.md  PROJECT.md  README.md  compose.yml  windows_ssh_readme.md  个人算力交易平台MVP技术方案.md  架构说明.md  项目结构说明.md
Buyer_Client/: README.md
CCCC/: apply_group_template.py  cccc-control-common.ps1  cccc-control-common.sh  cccc-start.ps1  cccc-start.sh  cccc-status.ps1  cccc-status.sh  cccc-stop.ps1  cccc-stop.sh  run-cccc.ps1  run-cccc.sh  start-cccc.cmd  startup_probe.py
Docker_swarm/: README.md
Plantform_Backend/: README.md
backend/: .gitignore  Dockerfile  README.md  http_seller_zero.sqlite3-journal  pyproject.toml
backend/app/: main.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20260326_0001_widen_node_status_fields.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  buyer.py  buyer_catalog.py  buyer_orders.py  health.py  platform.py  platform_offers.py  swarm.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  activity.py  identity.py  platform.py
backend/app/schemas/: activity.py  auth.py  platform.py
backend/app/services/: activity.py  auth.py  image_offer_publishing.py  pricing_engine.py  pricing_sources.py  runtime_bootstrap.py  runtime_sessions.py  swarm_adapter.py  swarm_manager.py  usage_billing.py  wireguard_server.py
backend/tests/: conftest.py  test_worker.py
backend/tests/api/: test_auth_platform.py  test_health.py  test_pricing_billing_api.py  test_swarm.py
backend/tests/core/: test_config.py
backend/tests/services/: test_pricing_engine.py  test_swarm_adapter.py  test_usage_billing.py  test_wireguard_server.py
frontend/: README.md  (+3 more)
(+86 files in other folders)
