[project]
name = "app"
version = "0.1.0"
description = "Minimal FastAPI backend skeleton"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi<1.0.0,>=0.114.2",
    "uvicorn[standard]<1.0.0,>=0.30.6",
    "pydantic>2.0",
    "alembic<2.0.0,>=1.12.1",
    "sqlalchemy<3.0.0,>=2.0.36",
    "pydantic-settings<3.0.0,>=2.2.1",
    "celery<6.0.0,>=5.4.0",
    "redis<6.0.0,>=5.0.0",
    "psycopg[binary]<4.0.0,>=3.2.0",
    "paramiko<5.0.0,>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "httpx<1.0.0,>=0.28.1",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
